# xcloud

./: .gitignore  README.md  pyproject.toml  xcloud.db.bak  xcloud.sh  xcloud.tmux
src/: main.py
src/Data/: __init__.py  database.py  models.py
src/presentation/: __init__.py  agent_api.py  auth_api.py  calendar_api.py  email_api.py  files_api.py  google_auth_api.py  llm_api.py  meetings_api.py  notification_api.py  rag_api.py  reminder_api.py  task_api.py
src/services/: __init__.py  agent_service.py  auth_service.py  chat_service.py  dir_config.py  email_service.py  files_service.py  gmail_service.py  google_auth_service.py  google_calendar_service.py  google_tasks_service.py  llm_service.py  meeting_service.py  notification_service.py  rag_job.py  rag_service.py  recording_watcher.py  reminder_service.py  search_service.py  task_service.py
src/services/google_mcp/: requirements.txt  server.py
src/services/whisper/: __init__.py  configuration.py  path_config.py  transcript.py  watcher.py
