[project]
name = "xcloud"
version = "0.1.0"
description = "FastAPI wrapper for local Ollama LLM services"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "ollama",
    "python-multipart",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
