[project]
name = "xcloud"
version = "0.1.0"
description = "FastAPI wrapper for local Ollama LLM services and Faster-Whisper transcription"
readme = "README.md"
requires-python = ">=3.9"

dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "ollama",
    "python-multipart",
    "faster-whisper>=1.2.0",
    "openai-whisper>=20250625",
    "ctranslate2>=4.6.1",
    "torch>=2.9.0",
    "av>=16.0.1",
    "numpy>=2.0.0",
    "onnxruntime>=1.23.1",
    "sounddevice>=0.5.2",
    "huggingface-hub>=0.35.3",
    "requests>=2.32.5",
    "llama-index-core",
    "llama-index-embeddings-ollama",
    "llama-index-vector-stores-chroma",
    "chromadb",
    "pypdf",
    "llama-index-llms-openai",
    "ddgs"
]

[project.optional-dependencies]
dev = [
    "pyinstaller>=6.16.0",
    "pyinstaller-hooks-contrib>=2025.9",
    "watchdog>=6.0.0",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
